# foo_parametrization

./: README.md  foo_parameterization.py  main.py  pyproject.toml  setup.py  test_foo_parameterization.py
fo_parameterization/: __init__.py
foo_parameterization/: foo_parameterization.py
foo_parameterization.egg-info/: PKG-INFO  SOURCES.txt
foo_parameterization_vandit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_foo_parameterization.py
